# diplomik2026

./: .gitignore  pyproject.toml
clubuser/: .models.py.swp  models.py
clubuser/migrations/: 0001_initial.py
guest_otziv/: models.py
guest_otziv/migrations/: 0001_initial.py
karaoke/: .views.py.swp  admin.py  settings.py  urls.py  views.py
otziv/: models.py  urls.py  views.py
otziv/migrations/: 0001_initial.py
rooms/: .models.py.swp  forms.py  models.py  urls.py  views.py
rooms/migrations/: 0001_initial.py
static/css/: base.css
templates/registration/: login.html
templates/rooms/: .room_schedule.html.swp  .rooms_home.html.swp  _booking_card.html  _footer.html  _navbar.html  book_slot.html  cabinet.html  karaoke_club_site.html  my_karaoke.html  payment.html  price.html  reports.html  room_schedule.html  rooms_home.html  upcoming.html
